--- a/css/style.css
+++ b/css/style.css
@@ -22,16 +22,27 @@
 /*******************************************/
 
 body {
-
+     text-align: center;
+     display: flex;
+     align-items: center;
+     flex-direction: column;
+     
 }
 
 
 /******************************************
 /* LAYOUT
 /*******************************************/
+
+form {
+     width: 80%;
+     display: flex;
+     justify-content: center;
+     flex-wrap: wrap;
+}
 input {
-     display: block;
      margin: 20px 0;
+     width: 70%;
 }
 header {
 
