--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@ body {
      display: flex;
      align-items: center;
      flex-direction: column;
+     font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
      
 }
 
@@ -42,7 +43,7 @@ form {
 }
 input {
      margin: 20px 0;
-     width: 70%;
+     width: 50%;
 }
 header {
 
@@ -53,5 +54,10 @@ footer {
 }
 
 /******************************************
-/* ADDITIONAL STYLES
+/* SYLLABLES
 /*******************************************/
+
+#line1Syllables, #line2Syllables, #line3Syllables {
+     margin-top: 20px;
+     margin-left: 10px;
+}
